--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "laravel/framework": "^9.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^9.2",
+        "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.4",
         "spatie/laravel-medialibrary": "^9.6.0",
-        "spatie/laravel-permission": "^5.5.2",
-        "laravel/ui": "^3.4"
+        "spatie/laravel-permission": "^5.5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
